traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:38: error: value update is not a member of Int
  else if(getX()=6 && getY()=1) // si apr?s gd diago (plus besoin de compteur)
          ^TraversalDiagonal:38: error: value && is not a member of Int
  else if(getX()=6 && getY()=1) // si apr?s gd diago (plus besoin de compteur)
                   ^